--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@vercel/postgres": "^0.3.0",
     "autoprefixer": "10.4.14",
+    "drizzle-orm": "^0.26.5",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
     "next-sanity": "^4.3.3",
+    "pg": "^8.11.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,5 +27,8 @@
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.18.1"
   }
 }
